# plantomics-studio

./: .gitignore  ANALYSIS-PLUGIN-STATUS.md  ANALYSIS-PLUGIN.md  FIXES-STATUS.md  INSTALL.md  LICENSE  README.md  RECONSTRUCT-STATUS.md  REPORT-INTEGRATION.md  UI-STATUS.md  UPSTREAM-COMPLETE-STATUS.md  build-and-install.sh  fastp.html  fastp.json
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: build-core.yml  build-module-rnaseq-bulk.yml
core/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
core/backend-py/: main.py
core/conda-env/: base.yaml
core/src/: App.tsx  main.tsx
core/src-tauri/: Cargo.toml  tauri.conf.json
core/src-tauri/capabilities/: default.json
core/src-tauri/resources/: modules.json
core/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
core/src/lib/: api.ts  (+3 more)
docs/: ARCHITECTURE.md  CHANGES.md  MODULE_DESIGNS.md  MODULE_DEVELOPMENT.md  RELEASE.md
modules-source/: README.md
modules-source/omics-analysis/: module.yaml
modules-source/omics-drs/: README.md  module.yaml
modules-source/omics-mirna/: README.md  module.yaml
modules-source/omics-ont-lncdrs/: README.md  module.yaml
modules-source/omics-ont-lncrna/: README.md  module.yaml
modules-source/omics-ont-transcriptome/: README.md  module.yaml
modules-source/omics-ont-translatome/: README.md  module.yaml
modules-source/omics-rnaseq-bulk/: README.md  module.yaml
modules-source/omics-tail-iso-seq/: README.md  module.yaml
scripts/: build-deb.sh  clean-everything.sh  gwh_plants.json  reset-build.sh  uninstall-all.sh
(+233 files in other folders)
